test/files/run/t11838.script
scala> val m = status match {
     |   case 42 => "ok"
     |   case 27 => {
     |     println("oops")
     |     "oops"
     |   }
